--- a/src/test/resources/application-integrationtest.properties
+++ b/src/test/resources/application-integrationtest.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:test;MODE=MySQL;NON_KEYWORDS=USER,VALUE
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
