--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
 spring.session.jdbc.initialize-schema=embedded
 logging.level.com.ksprogramming.equipment=trace
-
+security.bas
 #spring.datasource.url=jdbc:h2:mem:test
 #spring.datasource.username=root
 #spring.datasource.password=
