--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -2,7 +2,7 @@ spring.application.name=Equipment
 server.port = 8081
 spring.datasource.url=jdbc:mysql://localhost:3306/equipment?useUnicode=true&characterEncoding=utf8&useJDBCCompliantTimezoneShift=true&zeroDateTimeBehavior=convertToNull&useLegacyDatetimeCode=false&serverTimezone=Europe/London
 spring.datasource.username=root
-spring.datasource.password=Misiaczek87pl
+spring.datasource.password=Misiaczek87.pl
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
