--- a/src/main/resources/application-develop.properties
+++ b/src/main/resources/application-develop.properties
@@ -8,9 +8,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=false
 spring.session.jdbc.initialize-schema=embedded
 logging.level.com.ksprogramming.equipment=trace
+server.servlet.session.timeout=15m
 
-
-
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sdsw ijbi mgpr sxcz
+spring.mail.password=Misiaczek87.pl
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
 
 logo.front.path=/img/logos/logo-computing-college-1024px.png
 logo.panel.path=/img/logos/logo-computing-college-1024px.png
