add forgotten password with use token

--- a/src/test/resources/application-integrationtest.properties
+++ b/src/test/resources/application-integrationtest.properties
@@ -4,3 +4,8 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+app.name.front=Equipment
+app.name.panel=Equipment
+favicon.path=/img/logos/logo-computing-college-48px.png
+logo.front.path=/img/logos/logo-computing-college-1024px.png
+logo.panel.path=/img/logos/logo-computing-college-1024px.png
